<resources>
    <!-- common -->
    <string name="app_name">FlySight Viewer</string>
    <string name="title_with_file_name">FlySight Viewer: %s</string>
    <string name="main_menu_choose_folder">Choose folder</string>
    <string name="loading">Loading...</string>
    <string name="utc_date_format">%s UTC</string>

    <!-- log -->
    <string name="log_menu_zoom">Zoom out</string>
    <string name="log_menu_chart_mode">Mode</string>
    <string name="log_menu_skydive">Skydive</string>
    <string name="log_menu_description">Edit Description</string>
    <string name="log_menu_timezone">Set Timezone</string>
    <string name="log_menu_timezone_hint">Filter Zones</string>
    <string name="log_menu_timezone_description">There\'re %d other FlySight logs for this location. Would you like to apply timezone %s for these too?</string>
    <string name="log_menu_delete">Delete</string>
    <string name="log_delete_confirmation_title">Delete</string>
    <string name="log_delete_confirmation_description">Do you really want to delete this log?</string>

    <!-- data -->
    <string name="elevation">Elevation</string>
    <string name="horizontal_speed">Horizontal Speed</string>
    <string name="vertical_speed">Vertical Speed</string>
    <string name="total_speed">Total Speed</string>
    <string name="glide_ratio">Glide Ratio</string>
    <string name="heading">Heading</string>
    <string name="dive_angle">Dive Angle</string>
    <string name="duration">Duration</string>
    <string name="distance">Distance</string>

    <!-- units -->
    <string name="meter">m</string>
    <string name="meter_value">%s m</string>
    <string name="kilometer_per_hour">km/h</string>
    <string name="degree">°</string>
    <string name="degree_value">%s°</string>
    <string name="second_value">%s s</string>

</resources>