<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/log_menu_zoom_out"
        android:icon="@drawable/ic_extend"
        android:title="@string/log_menu_zoom"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/log_menu_chart_mode"
        android:icon="@drawable/ic_unlock"
        android:title="@string/log_menu_chart_mode"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/log_menu_skydive"
        android:icon="@drawable/ic_skydive"
        android:title="@string/log_menu_skydive"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/log_menu_description"
        android:icon="@drawable/ic_description"
        android:title="@string/log_menu_tags"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/log_menu_timezone"
        android:icon="@drawable/ic_timezone"
        android:title="@string/log_menu_timezone"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/log_menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/log_menu_delete"
        android:visible="false"
        app:showAsAction="never" />

</menu>